Version 0.1.17     unreleased

	* Convert to latest readthedocs.io standard.
	* Add NOTICE file to sdist, alongside existing LICENSE file.
	* Adjust GHA build to run MacOS and Windows tests only on latest Python.

Version 0.1.16     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.
	* Rework the GitHub Actions build process to pull out shared code.

Version 0.1.15     05 Sep 2022

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint 2.15.0 and address warnings.
	* Fix Pylint's configured class-attribute-naming-style to be snake_case.
	* Adjust Black configuration to target Python 3.7, 3.8, 3.9, and 3.10.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target Windows and MacOS.
	* Update various dependencies for the developer environment.

Version 0.1.14     30 Apr 2022

	* Adjust the pyproject.toml include directive to limit what goes into wheel.
	* Remove the Safety scanner from the pre-commit hooks and GitHub action.

Version 0.1.13     14 Nov 2021

	* Adjust dependencies and build process to support Python 3.10.
	* Run test suite with python-testdox for more verbose output.

Version 0.1.12     17 Feb 2021

	* Fix pyproject.toml to include link to GitHub repository.

Version 0.1.11     17 Feb 2021

	* Standardize the format of the Apache v2 statement in LICENSE.

Version 0.1.10     07 Feb 2021

	* Publish coverage data to coveralls.io in GitHub workflow.

Version 0.1.9     07 Feb 2021

	* Update build process to include security scans using Safety.
	* Make other structural improvements to the build process.

Version 0.1.8     18 Jan 2021

	* Update PyCharm inspection profile.
	* Add documentation for PyCharm on Linux.
	* Add release history for v0.1.0 through v0.1.5 into Changelog.
	* Validate the release process on Linux.

Version 0.1.7     17 Jan 2021

	* Adjust scripts/install to make scripts executable.

Version 0.1.6     17 Jan 2021
